--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,24 @@
-# Dependencias de Node
-node_modules/
-.pnp.js
-.pnp/
-
-# Archivos de compilación
-dist/
-build/
-
-# Archivos de configuración de Vite o Create React App
-.vite/
-.vscode/
-
-# Archivos de registro
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Sistema operativo
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Archivos de entorno
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Editor de código
-.idea/
-*.swp
-
-# Archivos de producción
-out/
-coverage/
-
-package-lock.json 
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
