--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,23 @@ lib64/
 # Ignorar archivos específicos en src/
 src/__pycache__/
 src/**/*.pyc
+
+# Ignorar archivos específicos en la raíz del proyecto
+__pycache__/
+models/__pycache__/
+routes/__pycache__/
+# Archivos de paquetes
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+parts/
+var/
+sdist/
+develop-eggs/
+.installed.cfg
+lib/
+lib64/
+.Python
+*.wsgi
