--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
