--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas-confetti": "^1.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-highlight-words": "^0.20.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
